Fixed mobile tablet alignment issues

--- a/style.css
+++ b/style.css
@@ -90,11 +90,29 @@
     #country {
         width: 100%;
       }
-    .placeIcon {
-        width: 20px;
+    @media screen and (max-width: 992px){      
+      .placeIcon {
+        width: 34px;
         height: 34px;
         margin: 4px;
       }
+    }
+    @media screen and (min-width: 992px){
+    .placeIcon {
+        width: 34px;
+        height: 34px;
+        margin: 4px;
+        margin-right: -8px
+      }
+    }
+        @media screen and (min-width: 1200px){
+    .placeIcon {
+        width: 34px;
+        height: 34px;
+        margin: 4px;
+        margin-right: -15px
+      }
+    }
     .hotelIcon {
         width: 24px;
         height: 24px;
@@ -124,7 +142,7 @@
     }
     
     @media screen and (max-width: 768px){
-    .travellocationslist-mobile{
+    .travellocationslist{
         margin-top: 0px;
         padding: 0px;
         margin-left: 20px;
@@ -141,7 +159,7 @@
         margin: 0px;
         margin-bottom: -10px;
         border-color: blue;
-        font-size: 14px;
+        font-size: 13px;
     }
     }
     
@@ -152,7 +170,7 @@
         margin: 0px;
         margin-bottom: -10px;
         border-color: blue;
-        font-size: 14px;
+        font-size: 13px;
     }
     }
     @media screen and (min-width: 992px){
@@ -162,7 +180,18 @@
         margin: 0px;
         margin-bottom: -10px;
         border-color: blue;
-        font-size: 20px;
+        font-size: 18px;
+    }
+    }
+    
+    @media screen and (min-width: 1200px){
+    .navbar{
+        background-color: blue;
+        color:  white;
+        margin: 0px;
+        margin-bottom: -10px;
+        border-color: blue;
+        font-size: 23px;
     }
     }
     
@@ -172,7 +201,7 @@
         float: left;
         height: 50px;
         padding: 15px 15px;
-        font-size: 18px;
+        font-size: 17px;
         line-height: 20px;
         color: white;
         }
@@ -185,6 +214,17 @@
         height: 50px;
         padding: 15px 15px;
         font-size: 22px;
+        line-height: 20px;
+        color: white;
+        }   
+    }
+    
+        @media screen and (min-width: 1200px){
+    .navbar-title {
+        float: left;
+        height: 50px;
+        padding: 15px 15px;
+        font-size: 27px;
         line-height: 20px;
         color: white;
         }   
@@ -255,7 +295,6 @@
     }
     @media (min-width: 768px){
     .listspan{
-        font-size:20px;
         display: none;
     }
     }
@@ -281,15 +320,15 @@
     }
     
     @media screen and (max-width: 768px){
-    .mobile-destinationcontainer{
+    .destinationcontainer{
         min-height: 500px;
         background-color: white;
         padding-top: 5px;
-        
+        max-width: 100%;
     }
     }
 
-    @media screen and (min-width: 768px){
+    @media screen and (min-width: 991px){
     .mapscontainer{
         border: solid;
         min-height: 440px;
@@ -300,12 +339,29 @@
         }
     }
     
-    @media screen and (max-width: 768px){
-    .mobile-mapscontainer{
+    @media screen and (max-width: 991px){
+    .mapscontainer{
         border: solid;
         min-height: 300px;
     }
     }
+    
+    
+    @media (min-width: 991px){
+    .mapwidth {
+        width: 50%;
+        float: left;
+    }
+    }
+
+    @media (max-width: 992px){
+    .mapwidth {
+        width: 100%;
+    }
+    }
+
+
+
 
     /*---google maps background images---*/
     
@@ -330,7 +386,7 @@
     }
     }
     @media screen and (max-width: 768px){
-    .mobile-backgroundimage-orientation{
+    .backgroundimage-orientation{
         background-size: cover;
         min-height: 250px;
         min-width: 60%;
@@ -349,7 +405,7 @@
     }
     
     @media screen and (max-width: 768px){
-    .europe-mobile-backgroundimage{
+    .europe-backgroundimage{
         background: url("/assets/images/europe-backgroundimage.jpg") no-repeat center top;
         background-position-y: bottom;
         background-size: cover;
@@ -368,7 +424,7 @@
     }
     
     @media screen and (max-width: 768px){
-    .northamerica-mobile-backgroundimage{
+    .northamerica-backgroundimage{
         background: url("/assets/images/northamerica-backgroundimage.jpg") no-repeat center top;
         background-position-y: center;
         background-size: cover;
@@ -385,7 +441,7 @@
     }
     
     @media screen and (max-width: 768px){
-    .southamerica-mobile-backgroundimage{
+    .southamerica-backgroundimage{
         background: url("/assets/images/southamerica-backgroundimage.jpg") no-repeat center top;
         background-position-y: bottom;
         background-size: cover;
@@ -402,7 +458,7 @@
     }
     
     @media screen and (max-width: 768px){
-    .africa-mobile-backgroundimage{
+    .africa-backgroundimage{
         background: url("/assets/images/africa-backgroundimage.jpg") no-repeat center top;
         background-size: cover;
     
@@ -419,7 +475,7 @@
     }
     
     @media screen and (max-width: 768px){
-    .australia-mobile-backgroundimage{
+    .australia-backgroundimage{
         background: url("/assets/images/australia-backgroundimage.jpg") no-repeat center top;
         background-position-y: 70%;
         background-size: cover;
@@ -511,7 +567,7 @@
     }
     
     @media screen and (max-width: 768px){
-    .maplistingbackground-mobile{
+    .maplistingbackground{
         background-color: antiquewhite;
         }
     }
@@ -570,7 +626,7 @@
       }
             
     @media screen and (max-width: 768px){
-    .resultsTable-mobile{
+    .resultsTable{
         width: 100%;
         margin-bottom: 5% ;
       }
